Gmail IMAP access working - app password with spaces

--- a/memory/2026-02-16.md
+++ b/memory/2026-02-16.md
@@ -40,7 +40,27 @@
 - Commit when: learning, milestones, doc updates, important exchanges
 - Documented in AGENTS.md
 
+## Calendar Integration
+
+### ✅ Calendar Access Granted
+- John shared his Google Calendar with **edit permissions**
+- Can read all events + create/modify when requested
+- Created usage policy: read freely, write carefully
+
+### ✅ Gmail IMAP Working!
+- App password generated and configured (with spaces: `ncdk kvey rymr fhxz`)
+- Successfully connected to Gmail via IMAP
+- Can read inbox, found 5 unread messages
+- Calendar invitation received - need to accept
+
+### Usage Policy
+- Alert about upcoming meetings during heartbeats
+- Add events when explicitly requested
+- Never delete/move/modify without asking first
+- Calendar is source of truth - mistakes have real consequences
+
 ## Next Actions
-- Test Gmail access
+- Set up OAuth2 (app passwords still not available)
+- Test Gmail + Calendar access
 - Respond to pending emails
 - Pull full text of John's briefing feedback
