Add daily briefing quality control workflow
Changes:
- Fixed generate-daily-briefing-v2.py to include X highlights section
- Changed cron job to draft → review → send workflow
- Created scripts/send-briefing.sh for easy sending after approval
- Briefings will be archived to memory/briefings/
- Updated MEMORY.md with new workflow documentation
- Updated memory/2026-02-17.md with QC process details

Why: John reported missing X posts and broken weather in today's briefing.
Solution: I now proofread drafts at 7:30 AM before sending to catch issues.

--- a/memory/2026-02-17.md
+++ b/memory/2026-02-17.md
@@ -30,10 +30,29 @@
 - Post-restart verification is important
 - Having automated health checks reduces manual work
 
+## Completed Actions
+- ✅ Fixed health-check.py to parse text output instead of JSON
+- ✅ Created x-top-posts.py placeholder script
+- ✅ Created today's daily note
+- ✅ Updated HEARTBEAT.md with daily health check schedule
+- ✅ All health checks now passing
+- ✅ Committed and pushed to GitHub (commit 413332b)
+
+### Daily Briefing Quality Control (7:34 AM)
+- **Issue**: John didn't receive proper briefing - missing X posts, broken weather
+- **Root cause**: Script wasn't including X highlights section, weather API issues
+- **Solution implemented**:
+  - Fixed generate-daily-briefing-v2.py to include X highlights
+  - Changed cron job workflow to draft → review → send
+  - Created scripts/send-briefing.sh for easy sending after approval
+  - Briefings now archived to memory/briefings/
+  - I now proofread before sending to catch issues
+- **Next briefing**: Tomorrow 7:30 AM (draft for my review)
+
 ## Next Steps
 - [ ] Get X API credentials for twitter integration
-- [ ] Test health check script after fixes
-- [ ] Consider adding periodic health checks to HEARTBEAT.md
+- [ ] Monitor health checks during daily heartbeats
+- [ ] Review tomorrow's briefing draft before sending
 
 ---
-*Created during health check initiative*
+*Created and updated during health check & briefing QC initiatives*
