Incorporate lessons learned into memory system
Added comprehensive documentation after today's infrastructure reuse learning:

1. Updated MEMORY.md with organized structure:
   - Workflow & Process section
   - Technical section
   - Critical Principles (4 new principles)

2. Created memory/jack-brain/learnings/infrastructure-reuse.md:
   - Documented the 3-attempt mistake sequence
   - Added search commands cheatsheet
   - When to reuse vs rebuild framework
   - Technical details of existing stack
   - Cost analysis

3. Updated 2026-02-17.md with final documentation notes

Ensures these lessons persist and aren't forgotten.

--- a/memory/2026-02-17.md
+++ b/memory/2026-02-17.md
@@ -53,18 +53,22 @@
 - **Verification**: Tested script, all 4 sections now present
 - **Next briefing**: Tomorrow 7:30 AM (draft for my review using checklist)
 
-### Data Source Setup (8:45 AM - 9:00 AM)
+### Data Source Setup (8:45 AM - 9:05 AM)
 - **Issue**: John pointed out I sent placeholders instead of real Aave/X data
 - **Root cause**: I didn't properly verify what "placeholder" meant - it's useless if always a placeholder
 - **First attempt (wrong)**: Started building new infrastructure from scratch
   - Created `scripts/aave-monitor.py` with RPC setup
   - Created `SETUP-DATA-SOURCES.md` with API setup guides
+- **Second attempt (also wrong)**: Used static cached data from second brain
+  - Found old numbers in john.md: HF 2.05, $360k/$142k
+  - But John pointed out these change daily with ETH/BTC prices!
 - **John's feedback**: "Why not use the infrastructure you already built? We don't want to build something new everyday"
-- **Correction (right)**:
-  - Found existing Aave data in `memory/jack-brain/context/john.md`
-  - Health Factor: 2.05, Collateral: $360k, Debt: $142k
-  - Updated briefing to use this cached data instead of requiring new API setup
-  - Shows real data with status indicators (Healthy/Caution/Risk)
+- **Third attempt (CORRECT)**:
+  - Found existing `scripts/check-aave-health.js` from Feb 15 commit
+  - It already worked! Uses ethers.js + free public RPC (publicnode.com)
+  - Integrated it into briefing generation
+  - Now shows LIVE data: HF 2.03, Collateral $357k, Debt $142k
+  - Updates automatically every time briefing runs
 
 ## Next Steps
 - [ ] John to provide X API key (or decide on web scraping)
@@ -82,5 +86,22 @@
 - **USE WHAT YOU ALREADY HAVE** - Don't rebuild from scratch daily. Check for existing data/code first.
 - Overthinking wastes time - John values efficiency, so should I
 
+### 09:05 AM - Memory & Learning Documentation
+- John requested lessons learned be incorporated into memory/second brain files
+- **Updated:**
+  - `MEMORY.md` - Reorganized Key Learnings into categories (Workflow, Technical, Critical Principles)
+  - Added 4 critical principles from today's work
+  - Created `memory/jack-brain/learnings/infrastructure-reuse.md` - comprehensive documentation
+- **Documentation includes:**
+  - The mistake sequence (3 attempts to solve Aave monitoring)
+  - Search commands cheatsheet for finding existing code
+  - When to reuse vs rebuild decision framework
+  - Technical details of existing Aave monitoring stack
+  - Cost analysis of not checking first
+
+### 09:08 AM - Model Switch
+- Switched from Claude Sonnet 4.5 to GPT-4o (via `.models` command)
+- Continuing session with model change
+
 ---
-*Created and updated during health check, briefing QC, and data source setup*
+*Created and updated during health check, briefing QC, data source setup, and documentation*
